resources/webidl2/test/invalid/baseline/record-key-with-extended-attribute.txt
Syntax error at line 2, since `interface Foo`:
  void foo(record<[XAttr] DOMString,
                  ^ Record key cannot have extended attribute
